--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "formuladb",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "description": "FormulaDB low code platform",
   "main": "index.js",
   "scripts": {
     "start": "node --inspect=0.0.0.0:9231 dist/frmdb-be.js",
-    "serve:docker": "cross-env FRMDB_RELEASE=${npm_package_version} nodemon --delay 250ms --watch dist/frmdb-be.js --exec \"npm run docker && docker-compose up -d\"",
-    "serve:maps": "npm run serve:docker -- maps",
-    "serve:apps": "live-server --watch=\"dist,apps\" --port=8081 ",
-    "docker": "npm run docker:maps && npm run docker:febe",
-    "docker:febe": "docker build -t formuladb-febe -f Dockerfile.febe . && docker tag formuladb-febe registry.gitlab.com/metawiz/febe/formuladb-febe:${npm_package_version}",
-    "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
     "compile": "tsc --sourceMap -p .",
     "compile:watch": "npm run compile -- -w",
     "bundle": "webpack",
-    "bundle:watch": "webpack --progress --watch --mode development",
+    "bundle:watch": "parallel-webpack --progress --watch --mode=development",
+    "docker:febe": "docker build -t formuladb-febe -f Dockerfile.febe . && docker tag formuladb-febe registry.gitlab.com/metawiz/febe/formuladb-febe:${npm_package_version}",
+    "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
+    "docker": "mkdir -p docker-img && concurrently \"npm run docker:maps && touch docker-img/maps.t\" \"npm run docker:febe && touch docker-img/febe.t\"",
+    "docker:watch": "nodemon --delay 200ms --watch dist --exec \"npm run docker\"",
+    "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'npm run docker:watch' ';' select-layout even-horizontal",
+    "serve": "cross-env FRMDB_RELEASE=${npm_package_version} nodemon --delay 200ms --watch docker-img --exec \"docker-compose up -d && touch docker-img/docker-compose-start-time\"",
+    "serve:apps": "live-server --watch=\"docker-img/docker-compose-start-time,apps\" --port=8081 TODO proxy to febe ",
     "spec:be": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
     "test": "npm run spec:be"
   },
@@ -66,7 +67,6 @@
     "cross-env": "^5.2.0",
     "csv": "^5.1.1",
     "debug": "^2.2.0",
-    "delegated-events": "^1.0.10",
     "detect-node": "^2.0.4",
     "dotenv": "^6.2.0",
     "express": "~4.13.1",
