--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,7 @@
             "name": "FE serve",
             "type": "chrome",
             "request": "launch",
+            "preLaunchTask": "",
             "url": "http://localhost:8081",
             "webRoot": "${workspaceFolder}",
             "sourceMapPathOverrides": {
