basic form data binding working, refactored FrmdbElementBase, fixed back link

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "TEXTJOIN",
         "VLOOKUP",
         "endkey",
+        "formuladb",
         "jsep",
         "objs",
         "startkey"
