--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "compile": "tsc --sourceMap -p .",
     "compile:watch": "npm run compile -- -w",
     "bundle": "webpack",
-    "bundle:watch": "parallel-webpack --progress --watch --mode=development",
+    "bundle:watch": "webpack --watch --progress --mode development",
     "docker:febe": "docker build -t formuladb-febe -f Dockerfile.febe . && docker tag formuladb-febe registry.gitlab.com/metawiz/febe/formuladb-febe:${npm_package_version}",
     "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
     "docker": "mkdir -p docker-img && concurrently \"npm run docker:maps && touch docker-img/maps.t\" \"npm run docker:febe && touch docker-img/febe.t\"",
-    "docker:watch": "nodemon --delay 200ms --watch dist --exec \"npm run docker\"",
-    "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'npm run docker:watch' ';' select-layout even-horizontal",
+    "docker:watch": "nodemon --delay 200ms --watch dist --exec \"time -f 'docker build %E' npm run docker\"",
+    "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'sleep 10 && npm run docker:watch' ';' select-layout even-horizontal",
     "serve": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'npm run docker:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
     "spec:be": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
     "test": "npm run spec:be"
