--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "formuladb",
         "jsep",
         "objs",
+        "rowid",
         "startkey"
     ],
     "cSpell.enabledLanguageIds": [
