--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-dist
+dist-be
+dist-fe
 index.html
 index.css
 tsc-out
