--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "formuladb",
   "version": "0.0.12",
   "description": "FormulaDB low code platform",
-  "main": "index.js",
   "scripts": {
-    "start": "node --inspect=0.0.0.0:9231 dist/frmdb-be.js",
+    "start": "node --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
     "compile": "tsc --sourceMap -p .",
     "compile:watch": "npm run compile -- -w",
     "bundle": "webpack",
     "bundle:watch": "webpack --watch --progress --mode development",
-    "docker:febe": "docker build -t formuladb-febe -f Dockerfile.febe . && docker tag formuladb-febe registry.gitlab.com/metawiz/febe/formuladb-febe:${npm_package_version}",
+    "docker:be": "docker build -t formuladb-febe -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${npm_package_version}",
+    "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
     "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
-    "docker": "mkdir -p docker-img && concurrently \"npm run docker:maps && touch docker-img/maps.t\" \"npm run docker:febe && touch docker-img/febe.t\"",
-    "docker:watch": "nodemon --delay 200ms --watch dist --exec \"time -f 'docker build %E' npm run docker\"",
-    "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'sleep 10 && npm run docker:watch' ';' select-layout even-horizontal",
+    "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
     "serve": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'npm run docker:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
     "spec:be": "jasmine --helper=./jasmine.helpers.js tsc-out/core/src/frmdb_engine.spec.js",
     "test": "npm run spec:be"
@@ -28,7 +26,6 @@
     "@types/node": "^12.0.2",
     "browser-sync": "^2.26.7",
     "concurrently": "^4.1.0",
-    "css-loader": "^2.1.1",
     "glob": "^7.1.4",
     "install": "^0.12.2",
     "jasmine": "^3.4.0",
@@ -40,6 +37,7 @@
     "nodemon": "^1.19.1",
     "npm": "^6.9.0",
     "parallel-webpack": "^2.3.0",
+    "pretty": "^2.0.0",
     "raw-loader": "^3.0.0",
     "rimraf": "^2.6.3",
     "sass": "^1.20.1",
@@ -50,7 +48,7 @@
     "ts-loader": "^6.0.1",
     "ts-node": "^8.2.0",
     "tsconfig-paths": "^3.8.0",
-    "typescript": "3.1.6",
+    "typescript": "3.5.2",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2",
     "webpack-node-externals": "^1.7.2"
@@ -65,7 +63,7 @@
     "cookie-parser": "~1.3.5",
     "cross-env": "^5.2.0",
     "csv": "^5.1.1",
-    "debug": "^2.2.0",
+    "debug": "^4.1.1",
     "detect-node": "^2.0.4",
     "dotenv": "^6.2.0",
     "express": "~4.13.1",
@@ -88,7 +86,7 @@
     "pouchdb-collate": "^7.0.0",
     "serve-favicon": "~2.3.0",
     "short-uuid": "^3.1.0",
-    "source-map-support": "^0.5.3",
+    "source-map-support": "^0.5.12",
     "tslib": "^1.9.3",
     "wait-on": "^3.2.0"
   },
