--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jquery": "^3.3.29",
     "@types/js-yaml": "^3.12.1",
     "@types/node": "^12.0.2",
+    "@types/lodash": "^4.14.135",
     "browser-sync": "^2.26.7",
     "concurrently": "^4.1.0",
     "glob": "^7.1.4",
@@ -54,6 +55,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.135",
     "acorn": "^5.4.1",
     "ag-grid-community": "^21.0.0",
     "ag-grid-enterprise": "^21.0.0",
