--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "license": "ISC",
   "devDependencies": {
     "@google-cloud/storage": "^2.5.0",
+    "@tbranyen/jsdom": "^13.0.0",
     "@types/jasmine": "^3.3.12",
     "@types/jquery": "^3.3.29",
     "@types/js-yaml": "^3.12.1",
-    "@types/node": "^12.0.2",
     "@types/lodash": "^4.14.135",
+    "@types/node": "^12.0.2",
     "browser-sync": "^2.26.7",
     "concurrently": "^4.1.0",
     "glob": "^7.1.4",
