--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@google-cloud/storage": "^2.5.0",
-    "@tbranyen/jsdom": "^13.0.0",
+    "@tbranyen/jsdom": "git=https://github.com/tbranyen/jsdom.git",
     "@types/jasmine": "^3.3.12",
     "@types/jquery": "^3.3.29",
     "@types/js-yaml": "^3.12.1",
@@ -28,6 +28,7 @@
     "@types/node": "^12.0.2",
     "browser-sync": "^2.26.7",
     "concurrently": "^4.1.0",
+    "document-register-element": "^1.13.2",
     "glob": "^7.1.4",
     "install": "^0.12.2",
     "jasmine": "^3.4.0",
@@ -53,7 +54,8 @@
     "typescript": "3.5.2",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "whatwg-fetch": "^3.0.0"
   },
   "dependencies": {
     "@types/lodash": "^4.14.135",
