--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile:watch": "npm run compile -- -w",
     "bundle": "webpack",
     "bundle:watch": "webpack --watch --progress --mode development",
-    "docker:be": "docker build -t formuladb-febe -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${npm_package_version}",
+    "docker:be": "docker build -t formuladb-be -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${npm_package_version}",
     "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
     "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
     "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
@@ -35,6 +35,7 @@
     "jasmine": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
     "jsdom": "^15.1.0",
+    "jsdom-devtools-formatter": "^1.0.0",
     "jsdom-global": "^3.0.2",
     "live-server": "^1.2.1",
     "node-fetch": "^2.6.0",
