showing table data in db-editor area

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -54,7 +54,7 @@
             "remoteRoot": "/dist",
             "sourceMaps": true,
             "outFiles": [
-                "${workspaceFolder}/dist-be/**/*.js"
+                "${workspaceFolder}/dist-be/*.js"
             ],
             "skipFiles": [
                 "<eval>/**/*.js",
