linked v-nav with data-grid via parent component db-editor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "VLOOKUP",
         "endkey",
         "formuladb",
+        "frmdbchange",
         "jsep",
         "objs",
         "rowid",
