--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
     "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
     "serve": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'npm run docker:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
-    "test": "node jasmine.js"
+    "test": "node jasmine.js",
+    "e2e:data": "FRMDB_STORAGE=postgres node tsc-out/test/src/load_test_data.js"
   },
   "author": "",
   "license": "ISC",
