--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsdom-devtools-formatter": "^1.0.0",
     "jsdom-global": "^3.0.2",
     "live-server": "^1.2.1",
+    "lolex": "^4.1.0",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
@@ -108,6 +109,7 @@
     "@fe": "./tsc-out/fe/src",
     "@fe-assets": "./fe/src",
     "raw-loader!@fe-assets": "./fe/src",
-    "!!raw-loader!sass-loader?sourceMap!@fe-assets": "./fe/src"
+    "!!raw-loader!sass-loader?sourceMap!@fe-assets": "./fe/src",
+    "raw-loader!@test-assets": "./test/src"
   }
 }
