localStorage new record UTs+manual; save on server UTs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "SUMIF",
         "TEXTJOIN",
         "VLOOKUP",
+        "debounced",
         "endkey",
         "formuladb",
         "frmdbchange",
