--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       FRMDB_STORAGE: "postgres"
       PGHOST: "db"
       DEBUG: "express:*"
+      DEV_MODE: "${DEV_MODE}"
+      DEFAULT_USER: "${DEFAULT_USER}"
     ports:
       - "8084:3000"
       # publish node inspector port. By default the V8 inspector listens on 127.0.0.1 only.
