--- a/docker/lb-nginx.conf
+++ b/docker/lb-nginx.conf
@@ -46,46 +46,27 @@ http {
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
+        location / {
+            proxy_pass https://storage.googleapis.com/formuladb-static-assets/portal/public/;
+            error_page 404 = @root_fallback;
+            proxy_intercept_errors on;
+        }
+
+        location /formuladb-api {
+            proxy_pass http://be:3000/formuladb-api;
+        }
+
+        location @root_fallback {
+            proxy_pass http://be:3000;
+        }
+
         # case-insensitive matching
         location ~* /formuladb-editor/(.*)$ {
-            root /home/demo/metawiz/VvvebJs;
-            try_files /$1 /40x.html;
-        }
-
-        location ~* /formuladb-apps/(.*)$ {
-            root /home/demo/frmdb-apps;
-            try_files /$1 @root_fallback_apps;
-        }
-
-        location ~* /formuladb-themes/(.*)$ {
-            root /home/demo/frmdb-themes;
-            try_files /$1 @root_fallback_apps;
-        }
-
-        location @root_fallback_apps {
-            proxy_pass http://localhost:8084;
+            proxy_pass https://storage.googleapis.com/formuladb-static-assets/vvvebjs/$1;
         }
 
         location ~* /formuladb/(.*)$ {
             proxy_pass https://storage.googleapis.com/formuladb-static-assets/fe/$1;
-        }
-
-        location / {
-            root /home/demo/metawiz/portal/public;
-            try_files $uri @root_fallback;
-        }
-
-        location @root_fallback {
-            proxy_pass http://localhost:8084;
-        }
-
-        # exact request URI matching
-        location /customize-editor.js {
-            proxy_pass https://storage.googleapis.com/formuladb-static-assets/fe/customize-editor.js;
-        }
-
-        location /formuladb-api {
-            proxy_pass http://localhost:8084/formuladb-api;
         }
 
         error_page 404 /404.html;
