--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
   - e2e_dev_env
   - buildprodimages
   - deploy
+  - e2e_demo_env
   # - e2e_example_apps
   # - cleanup
   # - videos
@@ -111,6 +112,13 @@ deploy:
   only:
     - master
 
+e2e_demo_env:
+  stage: e2e_dev_env
+  script:
+    - true
+  only:
+    - master
+
 # e2e_example_apps:
 #   script:
 #     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/metawiz/e2e.git
@@ -127,11 +135,12 @@ deploy:
 #     refs:
 #       - master
 
-# cleanup:
-#   stage: cleanup
-#   script:
-#     - docker-compose down
-#     - docker image prune --all -f
-#     - killall node --quiet || true
-#     - rm -rf /home/gitlab-runner/cache/metawiz/febe/*
-#   when: always
+cleanup:
+  stage: cleanup
+  script:
+#    - docker-compose down
+    - docker ps -q |xargs docker rm 
+    - docker images -q |xargs docker rmi
+#    - killall node --quiet || true
+    - find /home/gitlab-runner/cache/ -type f -mmin +60 -delete
+  when: always
