--- a/docker/Dockerfile.lb
+++ b/docker/Dockerfile.lb
@@ -1,3 +1,5 @@
 FROM nginx:latest
 
 COPY lb-nginx.conf /etc/nginx/nginx.conf
+COPY server.crt /etc/pki/nginx/server.crt
+COPY server.key /etc/pki/nginx/private/server.key
