--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,8 +139,7 @@ cleanup:
   stage: cleanup
   script:
 #    - docker-compose down
-    - docker ps -q |xargs docker rm 
-    - docker images -q |xargs docker rmi
+    - docker system prune -af
 #    - killall node --quiet || true
     - find /home/gitlab-runner/cache/ -type f -mmin +60 -delete
   when: always
