--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
         "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
         "serve": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'npm run docker:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
-        "test": "node jasmine.js",
+        "test:unit": "node jasmine.js",
+        "test:e2e": "protractor test/e2e/protractor.conf.js",
         "e2e:data": "FRMDB_STORAGE=postgres node tsc-out/test/src/load_test_data.js"
     },
     "author": "",
@@ -65,6 +66,7 @@
         "ag-grid-community": "^21.1.0",
         "ag-grid-enterprise": "^21.1.0",
         "body-parser": "~1.13.2",
+        "chromedriver": "^76.0.0",
         "cluster-key-slot": "^1.0.12",
         "connect-ensure-login": "^0.1.1",
         "cookie-parser": "~1.3.5",
@@ -85,10 +87,10 @@
         "lodash": "^4.17.11",
         "md5": "^2.2.1",
         "mime": "^2.4.4",
-        "node-fetch": "^2.6.0",
         "module-alias": "^2.1.0",
         "moment": "^2.24.0",
         "morgan": "^1.6.1",
+        "node-fetch": "^2.6.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "pg": "^7.8.0",
@@ -98,7 +100,8 @@
         "short-uuid": "^3.1.0",
         "source-map-support": "^0.5.12",
         "tslib": "^1.9.3",
-        "wait-on": "^3.2.0"
+        "wait-on": "^3.2.0",
+        "is-wsl": "^2.1.0"
     },
     "_moduleAliases": {
         "@domain": "./tsc-out/domain/src",
