--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
         "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
         "build:watch": "tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window -h 'bash serve.sh' ';' select-layout even-horizontal",
-        "serve": "tmux new-session 'npm run compile:watch' ';' split-window -v 'npm run bundle:watch' ';' split-window -h 'bash serve-k3s.sh' ';' split-window -h 'KUBECONFIG=`k3d get-kubeconfig --name='k3s-default'` skaffold dev --port-forward=true' ';' select-layout even-vertical",
+        "serve": "tmux new-session 'npm run compile:watch' ';' split-window -v 'npm run bundle:watch' ';' split-window -h 'bash serve-k3s.sh' ';' select-layout even-vertical",
         "test": "node jasmine.js",
         "e2e:data": "FRMDB_STORAGE=postgres node tsc-out/test/src/load_test_data.js"
     },
@@ -39,7 +39,6 @@
         "live-server": "^1.2.1",
         "lolex": "^4.1.0",
         "node-sass": "^4.12.0",
-        "nodemon": "^1.19.1",
         "npm": "^6.9.0",
         "parallel-webpack": "^2.3.0",
         "pretty": "^2.0.0",
@@ -64,6 +63,7 @@
         "ag-grid-community": "^21.1.0",
         "ag-grid-enterprise": "^21.1.0",
         "body-parser": "~1.13.2",
+        "chokidar": "^3.0.2",
         "cluster-key-slot": "^1.0.12",
         "connect-ensure-login": "^0.1.1",
         "cookie-parser": "~1.3.5",
@@ -84,10 +84,11 @@
         "lodash": "^4.17.11",
         "md5": "^2.2.1",
         "mime": "^2.4.4",
-        "node-fetch": "^2.6.0",
         "module-alias": "^2.1.0",
         "moment": "^2.24.0",
         "morgan": "^1.6.1",
+        "node-fetch": "^2.6.0",
+        "nodemon": "^1.19.1",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "pg": "^7.8.0",
