--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.12",
     "description": "FormulaDB low code platform",
     "scripts": {
-        "start": "node --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
+        "start": "nodemon dist-be/frmdb-be.js",
         "compile": "tsc --sourceMap -p .",
         "compile:watch": "npm run compile -- -w",
         "bundle": "webpack",
@@ -63,7 +63,6 @@
         "ag-grid-community": "^21.1.0",
         "ag-grid-enterprise": "^21.1.0",
         "body-parser": "~1.13.2",
-        "chokidar": "^3.0.2",
         "cluster-key-slot": "^1.0.12",
         "connect-ensure-login": "^0.1.1",
         "cookie-parser": "~1.3.5",
@@ -88,6 +87,7 @@
         "moment": "^2.24.0",
         "morgan": "^1.6.1",
         "node-fetch": "^2.6.0",
+        "nodemon": "^1.19.1",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "pg": "^7.8.0",
