--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,9 @@ stages:
   - test_postgres
   - stress
   - bundle
+  - deploy_cluster
+  - build_and_deploy
   - e2e_dev_env
-  - buildprodimages
   - deploy
   # - e2e_example_apps
   # - cleanup
@@ -38,7 +39,7 @@ test_mem:
 test_postgres:
   stage: test_postgres
   script:
-    - docker-compose up -d db
+    - docker run --name postgres-for-unit-tests --rm -p 5432:5432 -e POSTGRES_PASSWORD=postgres -v pg-persistence:/var/lib/postgresql/data -d postgres
     - FRMDB_STORAGE=postgres npm test
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
@@ -50,7 +51,7 @@ stress:
   stage: stress
   script:
     - npm test -- core/src/frmdb_engine.stress.spec.ts
-    - docker-compose up -d db
+    - docker run --name postgres-for-unit-tests --rm -p 5432:5432 -e POSTGRES_PASSWORD=postgres -v pg-persistence:/var/lib/postgresql/data -d postgres
     - FRMDB_STORAGE=postgres npm test -- core/src/frmdb_engine.stress.spec.ts
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
@@ -69,32 +70,26 @@ bundle:
       - dist-be/
       - dist-fe/
 
-e2e_dev_env:
-  stage: e2e_dev_env
+deploy_cluster:
+  stage: deploy_cluster
   script:
-    - npm run e2e || true
+    - ./deploy-k3s.sh
 
-buildprodimages:
-  stage: buildprodimages
+build_and_deploy:
+  stage: build_and_deploy
   script:
-    # - docker build -t formuladb-minio -f Dockerfile.minio .
-    # - docker tag formuladb-minio registry.gitlab.com/metawiz/febe/formuladb-minio:${CI_COMMIT_TAG}
-    # - docker push registry.gitlab.com/metawiz/febe/formuladb-minio:${CI_COMMIT_TAG}
-    # - npm run docker:maps
-    # - docker push registry.gitlab.com/metawiz/febe/formuladb-sourcemaps:${CI_COMMIT_TAG}
-    - npm run docker:be
-    - docker push registry.gitlab.com/metawiz/febe/formuladb-be:${CI_COMMIT_TAG:-latest}
-    - docker build -t formuladb-lb -f docker/Dockerfile.lb docker
-    - docker tag formuladb-lb registry.gitlab.com/metawiz/febe/formuladb-lb:${CI_COMMIT_TAG:-latest}
-    - docker push registry.gitlab.com/metawiz/febe/formuladb-lb:${CI_COMMIT_TAG:-latest}
+    - skaffold run
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
       - node_modules/
       - dist-be/
       - dist-fe/
-  only:
-    - master
+
+e2e_dev_env:
+  stage: e2e_dev_env
+  script:
+    - npm run e2e || true
 
 deploy:
   stage: deploy
