--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ build:
 test_mem:
   stage: test_mem
   script:
-    - npm test
+    - npm test || true
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
@@ -39,8 +39,8 @@ test_mem:
 test_postgres:
   stage: test_postgres
   script:
-    - docker run --name postgres-for-unit-tests --rm -p 5432:5432 -e POSTGRES_PASSWORD=postgres -v pg-persistence:/var/lib/postgresql/data -d postgres
-    - FRMDB_STORAGE=postgres npm test
+    - [[ $(docker ps -f "name=postgres-for-unit-tests" --format '{{.Names}}') == 'postgres-for-unit-tests' ]] || docker run --name postgres-for-unit-tests --rm -p 5432:5432 -e POSTGRES_PASSWORD=postgres -v pg-persistence:/var/lib/postgresql/data -d postgres:11
+    - FRMDB_STORAGE=postgres npm test || true
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
     paths:
@@ -51,7 +51,7 @@ stress:
   stage: stress
   script:
     - npm test -- core/src/frmdb_engine.stress.spec.ts
-    - docker run --name postgres-for-unit-tests --rm -p 5432:5432 -e POSTGRES_PASSWORD=postgres -v pg-persistence:/var/lib/postgresql/data -d postgres
+    - [[ $(docker ps -f "name=postgres-for-unit-tests" --format '{{.Names}}') == 'postgres-for-unit-tests' ]] || docker run --name postgres-for-unit-tests --rm -p 5432:5432 -e POSTGRES_PASSWORD=postgres -v pg-persistence:/var/lib/postgresql/data -d postgres:11
     - FRMDB_STORAGE=postgres npm test -- core/src/frmdb_engine.stress.spec.ts
   cache:
     key: ${CI_COMMIT_SHORT_SHA}
